@@ -330,7 +330,7 @@ FILE *FioFOpenFileSp(const char *filename, const char *mode, Searchpath sp, Subd
 
 FILE *FioFOpenFileTar(TarFileListEntry *entry, size_t *filesize)
 {
-	FILE *f = fopen(entry->tar->filename, "rb");
+	FILE *f = fopen(entry->tar_filename, "rb");
 	assert(f != NULL);
 
 	fseek(f, entry->position, SEEK_SET);
@@ -470,9 +470,8 @@ static bool TarListAddFile(const char *filename)
 	FILE *f = fopen(filename, "rb");
 	assert(f != NULL);
 
-	TarListEntry *tar_entry = MallocT<TarListEntry>(1);
-	tar_entry->filename = strdup(filename);
-	_tar_list.insert(TarList::value_type(filename, tar_entry));
+	const char *dupped_filename = strdup(filename);
+	_tar_list[filename].filename = dupped_filename;
 
 	TarHeader th;
 	char buf[sizeof(th.name) + 1], *end;
@@ -523,9 +522,9 @@ static bool TarListAddFile(const char *filename)
 
 		/* Store this entry in the list */
 		TarFileListEntry entry;
-		entry.tar      = tar_entry;
-		entry.size     = skip;
-		entry.position = pos;
+		entry.tar_filename = dupped_filename;
+		entry.size         = skip;
+		entry.position     = pos;
 		/* Force lowercase */
 		strtolower(name);
 
