@@ -67,13 +67,15 @@ extern const char *_searchpaths[NUM_SEARCHPATHS];
  */
 struct TarListEntry {
 	const char *filename;
+
+	~TarListEntry() { free((void*)this->filename); }
 };
 struct TarFileListEntry {
-	TarListEntry *tar;
+	const char *tar_filename;
 	int size;
 	int position;
 };
-typedef std::map<std::string, TarListEntry *> TarList;
+typedef std::map<std::string, TarListEntry> TarList;
 typedef std::map<std::string, TarFileListEntry> TarFileList;
 extern TarList _tar_list;
 extern TarFileList _tar_filelist;
